gatekeeper/secure-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-calculator
  namespace: ai-devsecops
spec:
  replicas: 1

  selector:
    matchLabels:
      app: secure-calculator

  template:
    metadata:
      labels:
        app: secure-calculator

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001

      containers:
        - name: calculator
          image: ai-devsecops-calculator:1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
